--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -18,7 +18,7 @@
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container">
-                <h2>Our Services</h2>
+                <h2>Our Packages</h2>
                 <div class="row">
                     <div class="col-md-3">
                         <div class="thumbnail">
