--- a/MerlionPortal/MerlionPortal-war/web/oes/editsavedorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/editsavedorder.xhtml
@@ -3,10 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Edit Order</title>
-    </h:head>
+        <title>Generate PO</title>
+        <c:set var="root" value="${request.contextPath}" />
+        <link rel="stylesheet" href="${root}/css/bootstrap.min.css" type="text/css" />
+        <script src="${root}/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="${root}/js/notify.min.js" type="text/javascript"></script>
+
+    </h:head>   
     <h:body>
         <h1>Saved Order </h1>
         <h:form id="formMain">  
@@ -82,7 +89,7 @@
                             </h:panelGrid>
                         </div>
                         <div class="modal-footer">
-                            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                            <p:messages id="modalMessages" showDetail="true" autoUpdate="true" closable="true" />
                             <p:commandButton value="Reset" styleClass="btn btn-success" type="reset" />
                             <p:commandButton value="Submit" styleClass="btn btn-success" actionListener="#{editSavedOrder.setMyShipto()}" pt:data-dismiss="modal" update="detail" ajax="true"></p:commandButton>
                             <p:commandButton value="Close" styleClass="btn btn-warning" pt:data-dismiss="modal"></p:commandButton>
@@ -90,15 +97,10 @@
                     </div>
                 </div>
             </div>
+
             <br></br>
-        </h:form>
-        <script type="text/javascript">
-            function toggleModal() {
-                $("#shiptoModal").modal('show');
-            }
-        </script>
-        <h:form>
-            <br></br>
+            <br></br>       
+
             <p:outputLabel for="quotation"  value="Quotation Number: " />
             <p:inputText id="quotation" value="#{editSavedOrder.qutatuonId}" required="true" label="Quotation Number"></p:inputText>
             <p:commandButton value="Search" actionListener="#{editSavedOrder.searchForQuotation()}" update="productsTalbe" ajax="true"></p:commandButton>
@@ -129,11 +131,14 @@
                 <p:column id="quantityColumn" headerText="Quantity">
                     <p:cellEditor>
                         <f:facet name="output"><h:outputText value="#{lineItem.quantity}" /></f:facet>
-                        <f:facet name="input"><p:inputText id="modelInput" value="#{lineItem.quantity}" style="width:96%" /></f:facet>
+                        <f:facet name="input"><p:inputText id="modelInput" value="#{lineItem.quantity}" style="width:96%"/></f:facet>
                     </p:cellEditor>
                 </p:column>
-                <p:column id="lineTotal" headerText="Total Price">
-                    <h:outputText value="#{editSavedOrder.setLineTotal(lineItem.quantity, lineItem.price)}" />
+                <p:column headerText="Price">
+                    <h:outputText value="#{lineItem.price}" />
+                </p:column>
+                <p:column headerText="Availability">
+                    <h:outputText value="#{editSavedOrder.checkAvailability()}" />
                 </p:column>
 
                 <p:column style="width:32px">
@@ -143,13 +148,18 @@
             <br></br>
             <br></br>
             <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-            <p:commandButton value="Cancel"  action="retrievesavedorder.xhtml" />
-            <p:commandButton value="Submit Order" actionListener="#{purchaseOrderManagedBean.submitOrder}"></p:commandButton>
+            <p:commandButton value="Go Back"  action="retrievesavedorder.xhtml" />
+            <p:commandButton value="Submit Order" actionListener="#{editSavedOrder.submitOrder()}" ajax="true"></p:commandButton>
         </h:form>
         <br></br>
         <br></br>
         <br></br>
         <br></br>
+        <script type="text/javascript">
+            function toggleModal() {
+                $("#shiptoModal").modal('show');
+            }
+        </script>
 
     </h:body>
 </html>
