--- a/MerlionPortal/MerlionPortal-war/web/oes/pogeneration.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/pogeneration.xhtml
@@ -10,7 +10,6 @@
         <title>Generate PO</title>
         <c:set var="root" value="${request.contextPath}" />
         <link rel="stylesheet" href="${root}/css/bootstrap.min.css" type="text/css" />
-        <script src="${root}/js/jquery-1.11.1.min.js" type="text/javascript"></script>
         <script src="${root}/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="${root}/js/notify.min.js" type="text/javascript"></script>
 
@@ -151,9 +150,11 @@
             <br></br>
             <br></br>
             <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-            <p:commandButton value="Cancel"  action="oesindexpage.xhtml" />
-            <p:commandButton value="Save Order" actionListener="#{purchaseOrderManagedBean.saveOrder()}" ajax="true"></p:commandButton>
-            <p:commandButton value="Submit Order" actionListener="#{purchaseOrderManagedBean.submitOrder}" ajax="true"></p:commandButton>
+            <p:commandButton value="Go Back"  action="oesindexpage.xhtml" />
+            <c:if test="#{purchaseOrderManagedBean.checkSubmittable()}">
+                <p:commandButton value="Save Order" actionListener="#{purchaseOrderManagedBean.saveOrder()}" ajax="true"></p:commandButton>
+                <p:commandButton value="Submit Order" actionListener="#{purchaseOrderManagedBean.submitOrder}"  ajax="true"></p:commandButton>
+            </c:if>
         </h:form>
         <br></br>
         <br></br>
