--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragetype.xhtml
@@ -42,53 +42,55 @@
         </ui:define>
 
         <ui:define name="right">
-            <p:panel id="panel" header="Add Storage Type">
-                <p:ajaxStatus style="width:16px;height:16px;">
-                    <f:facet name="start">
-                        <h:graphicImage value="/img/load.gif" />
-                    </f:facet>
-                    <f:facet name="complete">
-                        <h:outputText value="" />
-                    </f:facet>
-                </p:ajaxStatus>
-                <p:panelGrid>
+            <h:form>
+                <p:panel id="panel" header="Add Storage Type">
+                    <p:ajaxStatus style="width:16px;height:16px;">
+                        <f:facet name="start">
+                            <h:graphicImage value="/img/load.gif" />
+                        </f:facet>
+                        <f:facet name="complete">
+                            <h:outputText value="" />
+                        </f:facet>
+                    </p:ajaxStatus>
+                    <p:panelGrid>
 
-                    <p:row>
-                        <p:column>
-                            <p:outputLabel for="warehouse" value="Warehouse Name: " />
-                        </p:column>
-                        <p:column>
-                            <p:selectOneMenu id="warehouse" value="#{createStorageTypeManagerBean.warehouseId}"  style="width:210px" required="true" requiredMessage="Please select a company">
-                                <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
-                                <f:selectItems value="#{createStorageTypeManagerBean.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId}   Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
-                            </p:selectOneMenu>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <p:outputLabel for="storageTypeName" style="font-weight: bold" value="Storage Type Name : " />
-                        </p:column>
-                        <p:column>
-                            <p:inputText required="true" label="storageTypeName" requiredMessage="Storage Type is required." id="storageTypeName" value="#{createStorageTypeManagerBean.storageTypeName}">
-                                <f:validateLength minimum="1" maximum="25" />
-                            </p:inputText>
-                        </p:column>
-                    </p:row>  
-                    <p:row>
-                        <p:column>
-                            <h:outputLabel for="description" style="font-weight: bold" value="Description: *" />
-                        </p:column>
-                        <p:column>
-                            <p:inputText required="true" label="description" requiredMessage="Description is required." id="description" value="#{createStorageTypeManagerBean.storagetDescription}">
-                                <f:validateLength minimum="1" maximum="100" />
-                            </p:inputText>
-                        </p:column>
-                    </p:row>  
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="warehouse" value="Warehouse Name: " />
+                            </p:column>
+                            <p:column>
+                                <p:selectOneMenu id="warehouse" value="#{createStorageTypeMB.selectedWarehouseId}"  style="width:210px" required="true" requiredMessage="Please select a warehouse">
+                                    <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{createStorageTypeMB.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId}   Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="storageTypeName" style="font-weight: bold" value="Storage Type Name : " />
+                            </p:column>
+                            <p:column>
+                                <p:inputText required="true" label="storageTypeName" requiredMessage="Storage Type is required." id="storageTypeName" value="#{createStorageTypeMB.storageTypeName}">
+                                    <f:validateLength minimum="1" maximum="25" />
+                                </p:inputText>
+                            </p:column>
+                        </p:row>  
+                        <p:row>
+                            <p:column>
+                                <h:outputLabel for="description" style="font-weight: bold" value="Description: *" />
+                            </p:column>
+                            <p:column>
+                                <p:inputText required="true" label="description" requiredMessage="Description is required." id="description" value="#{createStorageTypeMB.storagetDescription}">
+                                    <f:validateLength minimum="1" maximum="100" />
+                                </p:inputText>
+                            </p:column>
+                        </p:row>  
 
-                </p:panelGrid>
-                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:commandButton id="btn" value="Create New Storage Type" update="panel" actionListener="#{createStorageTypeManagerBean.createNewStorageType}" ajax="true" />
-            </p:panel>
+                    </p:panelGrid>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    <p:commandButton id="btn" value="Create New Storage Type" update="panel" actionListener="#{createStorageTypeMB.createNewStorageType}" ajax="true" />
+                </p:panel>
+            </h:form>
         </ui:define>
     </ui:composition>
 
