integrate nav bar-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecastgetperiodicity.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecastgetperiodicity.xhtml
@@ -74,7 +74,7 @@
                             </p:column>
                         </p:row>
                     </p:panelGrid>
-
+                    <p:commandButton value="Go Back"  action="#{forecastManagedBean.backToHistory}" />
                     <p:commandButton value="Proceed with forecasting" action="#{forecastGetParameterManagedBean.onParameterChange}" ajax="true"/>
 
                 </p:panel>
