--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecastgetperiodicity.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecastgetperiodicity.xhtml
@@ -17,7 +17,7 @@
 
         <ui:define name="more-imports">
             <ui:insert>
-                <!--                import CSS style or Javascript here, if any-->
+                <link rel="stylesheet" href="${request.contextPath}/css/mrp.css" type="text/css" />
             </ui:insert>
         </ui:define>
 
