--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -38,7 +38,7 @@
                             </h:panelGrid>
                         </c:if>
                         <br/>
-                        <h:panelGrid columns="4" cellpadding="5">
+                        <h:panelGrid columns="4" cellpadding="5" styleClass="create-role-table-style">
                             <p:outputLabel style="font-weight: bold"  value="Salutation * : "/>
                             <h:selectOneMenu required="true" requiredMessage="Please select salutation" id="salutation" value="#{createUserManagerBean.salution}" styleClass="form-control">
                                 <f:selectItem itemLabel="Select Salutation" itemValue="" noSelectionOption="true" />
