--- a/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
@@ -107,24 +107,23 @@
                             </div>
                         </div>
                     </div>
-                      <div class="col-md-4">
+                    <div class="col-md-4">
                         <div class="thumbnail">
                             <img src="img/3pl.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">TMS</h2>
                                 <div class="product-des-wi">
-                                    <h4 class="service-des">Increase your sales like never before!</h4><br /><br />
-                                    Automate your order processing and operations tasks, increase the efficiency and accuracy when managing your order lifecycle.<br /><br/>
-                                    <p>Benefits of OES</p>
+                                    <h4 class="service-des">From one place to another at the speed of light!</h4><br /><br />
+                                    Optimize your planning, scheduling, tracking and movement of goods today and deliver excellent services to your customers with our TMS system!<br /><br/>
+                                    <p>Benefits of TMS</p>
                                     <f:verbatim>
                                         <ul class="a">
-                                            <li>Capture orders from business and individual consumers.</li>
-                                            <li>Highly integrated with WMS, MRP and TMS to better support sales process.</li>
-                                            <li>Provide customer self-service functionalities (Eg. Track and record order statuses) </li>
-                                            <li>Consolidate information to facilitate MRP to do production planning.</li>
-                                            <li>Handle financial process such as generate invoice based on sales order and handle customer payment.</li>
-                                            <li>Consolidating all sales order information</li>
-                                            <li>Generate report for analysis</li>
+                                            <li>Benefits of TMS</li>
+                                            <li>Efficiently manage all your transportation assets</li>
+                                            <li>Have a bird’s eye view of all your shipments</li> 
+                                            <li>Manage and process requests for transportation services</li>
+                                            <li>Find the best route to deliver your products with our unique route optimization function</li>
+                                            <li>Achieve efficient scheduling of manpower</li>
                                         </ul>
                                     </f:verbatim>
                                 </div>
@@ -137,14 +136,14 @@
                             <div class="caption product-box">
                                 <h2 class="service-title">GRNS</h2>
                                 <div class="product-des-wi">
-                                    <h4 class="service-des">Save more and earn more!</h4><br /><br />
-                                    Meticulously designed for 1PL manufacturers. Use the most cost effective materials resource planning system today!<br /><br/>
-                                    <p>Benefits of MRP</p>
+                                    <h4 class="service-des">More Savings and more earnings!</h4><br /><br />
+                                    More savings and more earnings with our Global Rates Negotiation System!<br /><br/>
+                                    <p>Benefits of GRNS</p>
                                     <f:verbatim>
                                         <ul class="a">
-                                            <li>Perform the entire production planning process including sales forecasting, production planning, materials requirement planning and purchasing</li>
-                                            <li>Manage backorders gracefully</li>
-                                            <li>Simplified product and BOM management</li>
+                                            <li>Find the best bargain for services that you need</li>
+                                            <li>Sell your underutilized services or capacity at more favorable rates</li>
+                                            <li>Make full use of your existing resources by reducing resource wastage</li>
                                         </ul>
                                     </f:verbatim>                     
                                 </div>
