--- a/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="img/1pl.jpg" class="service-image" />
+                            <img src="img/service_crms.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">CRMS</h2>
                                 <div class="product-des-wi">
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="img/2pl.jpg" class="service-image" />
+                            <img src="img/service_wms.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">WMS</h2>
                                 <div class="product-des-wi">
@@ -65,7 +65,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="img/3pl.jpg" class="service-image" />
+                            <img src="img/service_oes.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">OES</h2>
                                 <div class="product-des-wi">
@@ -89,7 +89,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="img/4pl.jpg" class="service-image" />
+                            <img src="img/service_mrp.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">MRP</h2>
                                 <div class="product-des-wi">
@@ -109,7 +109,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="img/3pl.jpg" class="service-image" />
+                            <img src="img/service_tms.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">TMS</h2>
                                 <div class="product-des-wi">
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="img/4pl.jpg" class="service-image" />
+                            <img src="img/service_grns.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">GRNS</h2>
                                 <div class="product-des-wi">
