--- a/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
@@ -141,7 +141,7 @@
                                     <p>Benefits of GRNS</p>
                                     <f:verbatim>
                                         <ul class="a">
-                                            <li>Find the best bargain for services that you need</li>
+                                            <li>Find the best bargain for services that you need (warehouse space and transportation services)</li>
                                             <li>Sell your underutilized services or capacity at more favorable rates</li>
                                             <li>Make full use of your existing resources by reducing resource wastage</li>
                                         </ul>
