--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -15,6 +15,7 @@
         <ui:define name="more-imports">
             <ui:insert>
                 <link rel="stylesheet" href="${request.contextPath}/css/viewroles.css" type="text/css" />
+                <script src="${request.contextPath}/js/tableformat.js" type="text/javascript"></script>
             </ui:insert>
         </ui:define>
         
