--- a/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
@@ -14,6 +14,7 @@
         <ui:define name="more-imports">
             <ui:insert>
                 <link rel="stylesheet" href="${request.contextPath}/css/viewusers.css" type="text/css" />
+                <script src="${request.contextPath}/js/tableformat.js" type="text/javascript"></script>
             </ui:insert>
         </ui:define>
 
