Edited description for packages - Yunnie

--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -83,7 +83,7 @@
                             <img src="img/4pl.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">Package 4</h2>
-                                <h2 class="service-title">3PL and 4PL</h2>
+                                <h3>3PL and 4PL</h3>
                                 <div class="product-description">
                                     This package is designed to suit the needs of Third and Fourth Party Logistics Service Providers (3PLs and 4PLs).<br /><br />
                                     By subscribing to this package, your will gain access to the following systems:<br /><br />
