--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -98,12 +98,12 @@
                         </p:cellEditor>
                     </p:column>
 
-                    <p:column  headerText="Description">
+                    <p:column  headerText="Description" filterBy="#{warehouse.description}" filterMatchMode="contains">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{warehouse.description}" /></f:facet>
                             <f:facet name="input"><p:inputText value="#{warehouse.description}" style="width:100%" label="Description"/></f:facet>
                         </p:cellEditor>
-                    </p:column>
+                    </p:column> 
 
                     <p:column style="width:48px">
                         <p:commandButton action="#{warehouseViewEditManagedBean.deleteWarehouse(warehouse)}" update="warehouse" icon = "ui-icon-trash">
