--- a/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
@@ -122,7 +122,7 @@
                         </p:row>
 
                     </p:panelGrid>
-                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    <p:messages id="messages" autoUpdate="true" closable="true" />
                     <p:commandButton id="btn" value="Create New Warehouse" update="formMain" actionListener="#{cwmb.createNewWarehouse}" ajax="true" >
                     </p:commandButton>
 
