--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -121,7 +121,7 @@
 
                 </p:dataTable>
                 <br></br>
-                <p:messages id="msgs" showDetail="true" autoUpdate="true" closable="true" />
+                <p:messages id="msgs" autoUpdate="true" closable="true" />
             </h:form>
         </ui:define>
     </ui:composition>
