--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
@@ -154,7 +154,7 @@
                         </p:column>
 
                     </p:dataTable>
-                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    <p:messages id="messages" autoUpdate="true" closable="true" />
                 </p:panel>
             </h:form>
         </ui:define>
