--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
@@ -131,7 +131,7 @@
 
                         </p:row>
                     </p:panelGrid>
-                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    <p:messages id="messages" autoUpdate="true" closable="true" />
                     <p:commandButton id="btn" value="Create New Storage Bin" update="panel" actionListener="#{createStorageBinManagerBean.createStorageBin}" ajax="true" />
                 </p:panel>
 
