--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragetype.xhtml
@@ -87,7 +87,7 @@
                         </p:row>  
 
                     </p:panelGrid>
-                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    <p:messages id="messages" autoUpdate="true" closable="true" />
                     <p:commandButton id="btn" value="Create New Storage Type" update="panel" actionListener="#{createStorageTypeMB.createNewStorageType}" ajax="true" />
                 </p:panel>
             </h:form>
